--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@stripe/stripe-js": "^7.5.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.51.0",
     "@types/qrcode": "^1.5.5",
@@ -40,6 +41,7 @@
     "react-hook-form": "^7.60.0",
     "recharts": "^3.1.0",
     "sonner": "^2.0.6",
+    "stripe": "^18.3.0",
     "tailwind-merge": "^3.3.1",
     "ua-parser-js": "^2.0.4",
     "zod": "^4.0.5"
