--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@supabase/supabase-js": "^2.51.0",
     "@types/qrcode": "^1.5.5",
     "@types/ua-parser-js": "^0.7.39",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
